--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!-- Favicon Image -->
-        <link rel="icon" href="images/myfavicon.ico" type="image/x-icon" />
+        <link rel="icon" href="myfavicon.ico" type="image/x-icon" />
         <!-- Box Icons -->
         <link
             href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -129,7 +129,7 @@
                     <div class="col col-lg-4">
                         <img
                             class="myImage"
-                            src="images/home.png"
+                            src="home.png"
                             alt="My Image"
                         />
                     </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col col-lg-4 col-sm-12">
                         <img
-                            src="images/about.png"
+                            src="about.png"
                             class="myImage2"
                             alt="My image."
                         />
@@ -472,7 +472,7 @@
                     <div class="projects-box ">
                         <img
                             class="project-img"
-                            src="images/wells-fargo.png"
+                            src="wells-fargo.png"
                             alt="Wells fargo home page."
                         />
                         <div class="projects-layer">
@@ -488,7 +488,7 @@
                     <div class="projects-box ">
                         <img
                             class="project-img"
-                            src="images/nethub-home.png"
+                            src="nethub-home.png"
                             alt="Nethub home page"
                         />
                         <div class="projects-layer">
@@ -504,7 +504,7 @@
                     <div class="projects-box ">
                         <img
                             class="project-img"
-                            src="images/food-order.png"
+                            src="food-order.png"
                             alt="Food-deliver home page."
                         />
                         <div class="projects-layer">
