--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- swal fire -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <!-- Scroll reveal script -->
-        <script  defer src="https://unpkg.com/scrollreveal"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
         <!-- My Sripts -->
         <script src="index.js"></script>
         <!-- Bootstrap scripts  -->
