--- a/index.html
+++ b/index.html
@@ -496,11 +496,9 @@
                             alt="Wells fargo home page."
                         />
                         <div class="projects-layer">
-                            <h4>Web Design</h4>
+<!--                             <h4>Web Design</h4> -->
                             <p>
-                                Wells-fargo is a transportation company that deals
-                                with transportation of goods. Feel free to visit the
-                                website to have a glimpse of my work.
+                                Wells-fargo is a transportation company.
                             </p>
                             <!-- TODO Get the link for the wells fargo website -->
                         </div>
@@ -512,11 +510,10 @@
                             alt="Nethub home page"
                         />
                         <div class="projects-layer">
-                            <h4>Web Design</h4>
+<!--                             <h4>Web Design</h4> -->
                             <p>
                                 Nethub is a company that deals with software and
-                                hardware solutions. Feel free to visit the website
-                                to have a glimpse of my work.
+                                hardware solutions.
                             </p>
                             <!-- TODO Get the link to the nethub website -->
                         </div>
@@ -528,11 +525,10 @@
                             alt="Food-deliver home page."
                         />
                         <div class="projects-layer">
-                            <h4>Web Design</h4>
+<!--                             <h4>Web Design</h4> -->
                             <p>
-                                Foods-Deliver is a company that deals with delivery
-                                of food ordered online. Feel free to visit the
-                                website to have a glimpse of my work.
+                                Foods-Deliver is a company that deals with ordering & delivery
+                                of food to clients.
                             </p>
     
                         </div>
