--- a/index.html
+++ b/index.html
@@ -190,11 +190,7 @@
                             <i class="bx bxl-javascript line-cons mx-3"></i>
                             <i class="bx bxl-css3 line-cons mx-3"></i>
                             <i class="bx bxl-html5 line-cons mx-3"></i>
-                            <i class="bx bx-code-block line-cons mx-3"></i>
-                            <i class="bx bxs-window-alt line-cons mx-3"></i>
-                            <i
-                                class="bx bx-expand-horizontal line-cons mx-3"
-                            ></i>
+                            <i class="bx bx-expand-horizontal line-cons mx-3"></i>
                         </div>
                     </div>
                 </div>
